fix get item, set data firebase, fix lỗi position..., update dữ liệu sau sữa xóa (full)...

--- a/app/src/main/res/layout/item_trangchu_news.xml
+++ b/app/src/main/res/layout/item_trangchu_news.xml
@@ -74,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DESCRIPSION"
-        android:textColor="@color/gray_2"/>
+        android:textColor="@color/white"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -113,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TIME"
-            android:textColor="@color/gray_2"/>
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 
